--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,11 @@
   padding: 0 30px;
 }
 
+.grid-3 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
+}
 
 footer {
   background-color: purple;
